# Med_Backend

./: main.py  pyproject.toml
core/: config.py
items/: __init__.py  crud.py  schemas.py  views.py
