[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["c0nfid <beiov2004.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.devb.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
